--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script defer src="js/main.js"></script>
+    <link rel="icon" href="img/Attack__003.png">
 
 </head>
 <body>
+    <div id="bats"></div>
     <div id="treeElm"></div>
     <div id="cactus"></div>
 
