create 2 zombi element

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="bats"></div>
     <div id="treeElm"></div>
     <div id="cactus"></div>
+    <audio src="/audio/theme-song.mp3" autoplay></audio>
 
 
 </body>
