--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini Game</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/main.js"></script>
     <link rel="icon" href="img/Attack__003.png">
+    <script defer src="js/main.js"></script>
+
 
 </head>
 <body>
+    <div id="scoreBar">
+        <div id="scoreBord">Score :<label id="score"></label></div>
+    </div>
+    
     <div id="bats"></div>
     <div id="treeElm"></div>
     <div id="cactus"></div>
