create game over view

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <div id="bats"></div>
     <div id="treeElm"></div>
     <div id="cactus"></div>
+    <div id="game-over-pannal">
+        <div id="game-over"></div>
+        <div id="final-marks"></div>
+    </div>
+    
     <audio src="/audio/theme-song.mp3" autoplay></audio>
 
 
