add collision effect

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link rel="icon" href="img/Attack__003.png">
     <script defer src="node_modules/jquery/dist/jquery.min.js"></script>
     <script defer src="js/main.js"></script>
-    <!-- <script defer src="js/activity.js"></script> -->
 
 
 </head>
@@ -36,7 +35,7 @@
         <div id="game-win-img" class="final-img"></div>
         <div id="final-marks" class="marks">
             <div id="scoreBord-win">Your Score :<label id="score2"></label></div>
-            <button  id="btn-play-agin">play-agin</button>
+            <button id="btn-res" onclick="restart()">Restart</button><br>
         </div>
     </div>
     
