element tuch event

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="img/Attack__003.png">
     <script defer src="node_modules/jquery/dist/jquery.min.js"></script>
     <script defer src="js/main.js"></script>
+    <!-- <script defer src="js/zombi.js"></script> -->
 
 
 </head>
