--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="icon" href="img/Attack__003.png">
     <script defer src="node_modules/jquery/dist/jquery.min.js"></script>
     <script defer src="js/main.js"></script>
-    <!-- <script defer src="js/zombi.js"></script> -->
+    <script defer src="js/timeCount.js"></script>
+   
+  
 
 
 </head>
@@ -23,16 +25,14 @@
             <div id="score-bord">Score :<label id="score"></label></div>
         </div>
         <div id="timeBar">
-            <div id="time-bord">Time :
-                <span class="digit" id="hr">
-                    00</span>
-                <span class="txt">Hr.</span>
+            <div id="time-bord">Time -
+                <span class="txt"></span>
                 <span class="digit" id="min">
                     00</span>
-                <span class="txt">Min.</span>
+                <span class="txt">:</span>
                 <span class="digit" id="sec">
                     00</span>
-                <span class="txt">Sec.</span>
+                <span class="txt">:</span>
                 <span class="digit" id="count">
                     00</span>
             </div>
