--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
 	<Script defer type="module" src="js/timeCount.js"></Script>
 </head>
 <body>
-	<div>
+	<div id="start-view" >
 	<div class="d-grid gap-2 col-6 mx-auto">
 		<a href="index.html"><button class="btn btn-primary" type="button">START GAME</button></a>
 		<a href=""><button class="btn btn-primary" type="button">HELP</button></a>
