time bar implement 3

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 	<Script defer type="module" src="js/timeCount.js"></Script>
 </head>
 <body>
+	<div id="back-ground">
 	<div id="start-view" >
 	<div class="d-grid gap-2 col-6 mx-auto">
 		<a href="index.html"><button class="btn btn-primary" type="button">START GAME</button></a>
@@ -20,6 +21,7 @@
 		<a href=""><button class="btn btn-primary" type="button" onclick="exit()">EXIT</button></a>
 	  </div>
 	</div>
+</div>
 
 	
 </body>
