--- a/index.html
+++ b/index.html
@@ -47,18 +47,24 @@
         <div id="game-over" class="final-img"></div>
         <div id="game-over-marks" class="marks">
             <div id="scoreBord-loss">Your Score :<label id="score1"></label></div>
-            <button id="btn-re-try" onclick="restart()">re-try</button>
+            <div class="btnGroup">
+                <button id="btn-re-try" onclick="restart()">Re-try</button>
+                <a href="/home.html"><button type="button" class="btn btn-light">Main Menu </button></a>
+            </div>
         </div>
     </div>
     <div id="game-win">
         <div id="game-win-img" class="final-img"></div>
         <div id="final-marks" class="marks">
             <div id="scoreBord-win">Your Score :<label id="score2"></label></div>
-            <button id="btn-res" onclick="restart()">Restart</button><br>
+            <div class="btnGroup">
+                <button id="btn-res" onclick="restart()">Restart</button><br>
+                <a href="/home.html"><button type="button" class="btn btn-light"> Main Menu </button></a>
+            </div>
         </div>
     </div>
     
-    <!-- <audio src="/audio/theme-song.mp3" autoplay></audio> -->
+    <audio  src="/audio/theme-song.mp3"></audio>
 
 
 </body>  
