--- a/index.html
+++ b/index.html
@@ -1,71 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Game</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="img/Attack__003.png">
-    <script defer src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script defer src="js/main.js"></script>
-    <script defer src="js/timeCount.js"></script>
-   
-  
-
-
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Game-Start</title>
+	<link rel="icon" href="img/Attack__003.png">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/home.css">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+	<script defer src="node_modules/jquery/dist/jquery.min.js"></script>
+	<script defer src="/js/home.js"></script>
+	<!-- <Script defer type="module" src="/js/timeCount.js"></Script> -->
 </head>
 <body>
-    <div id="header">
-        <div id="scoreBar">
-            <div id="score-bord">Score :<label id="score"></label></div>
-        </div>
-        <div id="timeBar">
-            <div id="time-bord">Time -
-                <span class="txt"></span>
-                <span class="digit" id="min">
-                    00</span>
-                <span class="txt">:</span>
-                <span class="digit" id="sec">
-                    00</span>
-                <span class="txt">:</span>
-                <span class="digit" id="count">
-                    00</span>
-            </div>
-        </div>
-    </div>
-   
-    
-    <div id="bats"></div>
-    <div id="treeElm"></div>
-    <div id="cactus"></div>
-    <div id="game-over-pannal">
-        <div id="game-over" class="final-img"></div>
-        <div id="game-over-marks" class="marks">
-            <div id="scoreBord-loss">Your Score :<label id="score1"></label></div>
-            <div class="btnGroup">
-                <button id="btn-re-try" onclick="restart()">Re-try</button>
-                <a href="/home.html"><button type="button" class="btn btn-light">Main Menu </button></a>
-            </div>
-        </div>
-    </div>
-    <div id="game-win">
-        <div id="game-win-img" class="final-img"></div>
-        <div id="final-marks" class="marks">
-            <div id="scoreBord-win">Your Score :<label id="score2"></label></div>
-            <div class="btnGroup">
-                <button id="btn-res" onclick="restart()">Restart</button><br>
-                <a href="/home.html"><button type="button" class="btn btn-light"> Main Menu </button></a>
-            </div>
-        </div>
-    </div>
-    
-    <audio  src="/audio/theme-song.mp3"></audio>
+	<div id="back-ground">
+	<div id="start-view" >
+	<div class="d-grid gap-2 col-6 mx-auto">
+		<a href="index.html"><button class="btn btn-primary" type="button">START GAME</button></a>
+		<a href=""><button class="btn btn-primary" type="button">HELP</button></a>
+		<a href=""><button class="btn btn-primary" type="button" onclick="exit()">EXIT</button></a>
+	  </div>
+	</div>
+</div>
 
-
-</body>  
+	
+</body>
 </html>
