Start page create

--- a/game.html
+++ b/game.html
@@ -49,7 +49,7 @@
             <div id="scoreBord-loss">Your Score :<label id="score1"></label></div>
             <div class="btnGroup">
                 <button id="btn-re-try" onclick="restart()">Re-try</button>
-                <a href="/home.html"><button type="button" class="btn btn-light">Main Menu </button></a>
+                <a href="index.html"><button type="button" class="btn btn-light">Main Menu </button></a>
             </div>
         </div>
     </div>
@@ -59,7 +59,7 @@
             <div id="scoreBord-win">Your Score :<label id="score2"></label></div>
             <div class="btnGroup">
                 <button id="btn-res" onclick="restart()">Restart</button><br>
-                <a href="/home.html"><button type="button" class="btn btn-light"> Main Menu </button></a>
+                <a href="index.html"><button type="button" class="btn btn-light"> Main Menu </button></a>
             </div>
         </div>
     </div>
