--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<div id="back-ground">
 	<div id="start-view" >
 	<div class="d-grid gap-2 col-6 mx-auto">
-		<a href="index.html"><button class="btn btn-primary" type="button">START GAME</button></a>
+		<a href="game.html"><button class="btn btn-primary" type="button">START GAME</button></a>
 		<a href=""><button class="btn btn-primary" type="button">HELP</button></a>
 		<a href=""><button class="btn btn-primary" type="button" onclick="exit()">EXIT</button></a>
 	  </div>
