--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/home.css">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 	<script defer src="node_modules/jquery/dist/jquery.min.js"></script>
-	<script defer src="/js/home.js"></script>
+	<script defer src="js/home.js"></script>
 	<!-- <Script defer type="module" src="/js/timeCount.js"></Script> -->
 </head>
 <body>
